--- a/GEE.ipynb
+++ b/GEE.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP74+aos9Dj+SZHoAC1FKY4",
+      "authorship_tag": "ABX9TyN/EuLz9MWNFZ6r6LZutoSU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4435,6 +4435,135 @@
         "### Insights or Next Steps\n",
         "*   The consistently zero water body areas for both periods indicate that the current methodology (cloud threshold, NDWI threshold, or AOI definition) may not be effectively identifying water bodies. The next step should involve re-evaluating these parameters.\n",
         "*   It is crucial to adjust the NDWI threshold (e.g., experiment with different values) or re-examine the cloud masking criteria to ensure that genuine water features are not being inadvertently filtered out, or to confirm the absence of significant water bodies in the Udupi AOI under the current setup.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5cee2b02"
+      },
+      "source": [
+        "# Task\n",
+        "## Acquire Landsat Imagery for Thermal Analysis\n",
+        "\n",
+        "### Subtask:\n",
+        "Load Landsat 8 imagery, filter it for the Udupi Area of Interest (`aoi_udupi`) and the time window from '2022-01-01' to '2022-12-31', and apply cloud masking to ensure clear thermal data.\n",
+        "\n",
+        "#### Instructions:\n",
+        "1.  **Load Landsat 8 Image Collection**: Access the Landsat 8 Collection 2 Tier 1 Surface Reflectance image collection, which includes thermal bands (e.g., `LANDSAT/LC08/C02/T1_SR`).\n",
+        "2.  **Filter by Date and AOI**: Filter the collection using the `start_date_2022`, `end_date_2022`, and `aoi_udupi` variables.\n",
+        "3.  **Apply Cloud Masking**: Create and apply a function to mask out clouds using the `QA_PIXEL` band (CFMask algorithm results). This band provides information about cloud, shadow, and snow pixels. Filter for images with low cloud cover (e.g., `CLOUD_COVER < 20`).\n",
+        "4.  **Select and Reduce**: Select the relevant thermal band (B10 for brightness temperature) and potentially optical bands (e.g., B4, B5 for future emissivity calculations). Reduce the filtered and masked image collection to a single image (e.g., using `median`).\n",
+        "5.  **Print Image Information**: Print the information of the resulting preprocessed Landsat image to verify its bands and properties."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e24cbaa6"
+      },
+      "source": [
+        "## Acquire Landsat Imagery for Thermal Analysis\n",
+        "\n",
+        "### Subtask:\n",
+        "Load Landsat 8 imagery, filter it for the Udupi Area of Interest (`aoi_udupi`) and the time window from '2022-01-01' to '2022-12-31', and apply cloud masking to ensure clear thermal data.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "516fef2f"
+      },
+      "source": [
+        "**Reasoning**:\n",
+        "I will now implement the steps to load, filter, and preprocess Landsat 8 imagery for the Udupi AOI and the 2022 time window, including defining and applying a cloud masking function, and creating a median composite image, as per the subtask instructions.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 636
+        },
+        "id": "a63ac960",
+        "outputId": "f1e87216-a601-43a5-e2fe-76927320bccf"
+      },
+      "source": [
+        "import ee\n",
+        "\n",
+        "# Define a function to mask clouds from Landsat 8 imagery.\n",
+        "def maskL8clouds(image):\n",
+        "    # Bits 3 and 5 are cloud shadow and cloud, respectively.\n",
+        "    # See https://developers.google.com/earth-engine/datasets/catalog/LANDSAT_LC08_C02_T1_SR#bands\n",
+        "    qa = image.select('QA_PIXEL')\n",
+        "    cloud_shadow_bit_mask = (1 << 3)\n",
+        "    clouds_bit_mask = (1 << 5)\n",
+        "\n",
+        "    # Both flags should be set to zero, indicating clear conditions.\n",
+        "    mask = qa.bitwiseAnd(cloud_shadow_bit_mask).eq(0).And(\n",
+        "           qa.bitwiseAnd(clouds_bit_mask).eq(0))\n",
+        "\n",
+        "    # Return the masked image.\n",
+        "    return image.updateMask(mask)\n",
+        "\n",
+        "# Load Landsat 8 Collection 2 Tier 1 Surface Reflectance data.\n",
+        "# 'LANDSAT/LC08/C02/T1_SR' provides surface reflectance and thermal bands.\n",
+        "landsat_collection = ee.ImageCollection('LANDSAT/LC08/C02/T1_SR')\\\n",
+        "    .filterDate(start_date_2022, end_date_2022) \\\n",
+        "    .filterBounds(aoi_udupi)\n",
+        "\n",
+        "# Filter out images with high cloud cover (metadata CLOUD_COVER < 20).\n",
+        "filtered_landsat_collection = landsat_collection.filter(ee.Filter.lt('CLOUD_COVER', 20))\n",
+        "\n",
+        "# Apply the cloud masking function to the filtered collection.\n",
+        "# The map function applies the function to each image in the collection.\n",
+        "masked_landsat_collection = filtered_landsat_collection.map(maskL8clouds)\n",
+        "\n",
+        "# Check if the masked collection is empty\n",
+        "if masked_landsat_collection.size().getInfo() == 0:\n",
+        "    print(\"No Landsat 8 images found for Udupi AOI, 2022 time window, and cloud filter.\")\n",
+        "    preprocessed_landsat_udupi_2022 = None # Set to None or handle as appropriate\n",
+        "else:\n",
+        "    # Reduce the image collection to a single image using the median reducer.\n",
+        "    # Select relevant bands: B10 (thermal), B4 (Red), B5 (NIR).\n",
+        "    preprocessed_landsat_udupi_2022 = masked_landsat_collection.median().select(['B10', 'B4', 'B5'])\n",
+        "\n",
+        "    # Print information about the preprocessed Landsat image to verify.\n",
+        "    print(\"Preprocessed Landsat 8 image information for Udupi (2022):\")\n",
+        "    print(preprocessed_landsat_udupi_2022.getInfo())\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:google_auth_httplib2:httplib2 transport does not support per-request timeout. Set the timeout when constructing the httplib2.Http instance.\n",
+            "WARNING:google_auth_httplib2:httplib2 transport does not support per-request timeout. Set the timeout when constructing the httplib2.Http instance.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "EEException",
+          "evalue": "ImageCollection.load: ImageCollection asset 'LANDSAT/LC08/C02/T1_SR' not found (does not exist or caller does not have access).",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ee/data.py\u001b[0m in \u001b[0;36m_execute_cloud_call\u001b[0;34m(call, num_retries)\u001b[0m\n\u001b[1;32m    407\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 408\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mcall\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    409\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mgoogleapiclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHttpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/googleapiclient/_helpers.py\u001b[0m in \u001b[0;36mpositional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    129\u001b[0m                     \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 130\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    131\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/googleapiclient/http.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    937\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 938\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mHttpError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muri\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muri\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    939\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpostproc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mHttpError\u001b[0m: <HttpError 400 when requesting https://earthengine.googleapis.com/v1/projects/landsat-experiments/value:compute?prettyPrint=false&alt=json returned \"ImageCollection.load: ImageCollection asset 'LANDSAT/LC08/C02/T1_SR' not found (does not exist or caller does not have access).\". Details: \"ImageCollection.load: ImageCollection asset 'LANDSAT/LC08/C02/T1_SR' not found (does not exist or caller does not have access).\">",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mEEException\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-970564169.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;31m# Check if the masked collection is empty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mmasked_landsat_collection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetInfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No Landsat 8 images found for Udupi AOI, 2022 time window, and cloud filter.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mpreprocessed_landsat_udupi_2022\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;31m# Set to None or handle as appropriate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ee/computedobject.py\u001b[0m in \u001b[0;36mgetInfo\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    105\u001b[0m       \u001b[0mThe\u001b[0m \u001b[0mobject\u001b[0m \u001b[0mcan\u001b[0m \u001b[0mevaluate\u001b[0m \u001b[0mto\u001b[0m \u001b[0manything\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m     \"\"\"\n\u001b[0;32m--> 107\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcomputeValue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoder\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCallable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m...\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAny\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAny\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ee/data.py\u001b[0m in \u001b[0;36mcomputeValue\u001b[0;34m(obj)\u001b[0m\n\u001b[1;32m   1126\u001b[0m   \u001b[0m_maybe_populate_workload_tag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbody\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1127\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1128\u001b[0;31m   return _execute_cloud_call(\n\u001b[0m\u001b[1;32m   1129\u001b[0m       \u001b[0m_get_cloud_projects\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1130\u001b[0m       \u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ee/data.py\u001b[0m in \u001b[0;36m_execute_cloud_call\u001b[0;34m(call, num_retries)\u001b[0m\n\u001b[1;32m    408\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mcall\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mgoogleapiclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHttpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 410\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0m_translate_cloud_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=raise-missing-from\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    411\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    412\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mEEException\u001b[0m: ImageCollection.load: ImageCollection asset 'LANDSAT/LC08/C02/T1_SR' not found (does not exist or caller does not have access)."
+          ]
+        }
       ]
     }
   ]
